--- a/front-end/src/assets/styles/theme/config.scss
+++ b/front-end/src/assets/styles/theme/config.scss
@@ -4,23 +4,26 @@ $light-color: #f4f4f4;
 $danger-color: #dc3545;
 $success-color: #28a745;
 
-$clr-light: #fdffc4;
-$clr-dark: #00332a;
-$clr-primary: #dbffa2;
-$clr-secondary: #c3fcf2;
-$clr-accent: #ff7750;
-
-$foreground: $clr-dark;
-$background: $clr-light;
-
 $ff-title: "Playfair Display", serif;
 $ff-body: "Assistant", sans-serif;
 
-$clr-light: #fdffc4;
-$clr-dark: #00332a;
-$clr-primary: #202302;
-$clr-secondary: #00100d;
-$clr-accent: #ff7750;
+.theme__light {
+    $clr-light: #fdffc4;
+    $clr-dark: #00332a;
+    $clr-primary: #dbffa2;
+    $clr-secondary: #c3fcf2;
+    $clr-accent: #ff7750;
 
-$foreground: $clr-light;
-$background: $clr-dark;
+    $foreground: $clr-dark;
+    $background: $clr-light;
+}
+.theme_dark {
+    $clr-light: #fdffc4;
+    $clr-dark: #00332a;
+    $clr-primary: #202302;
+    $clr-secondary: #00100d;
+    $clr-accent: #ff7750;
+
+    $foreground: $clr-light;
+    $background: $clr-dark;
+}
