--- a/front-end/src/assets/styles/theme/config.scss
+++ b/front-end/src/assets/styles/theme/config.scss
@@ -1,5 +1,7 @@
 $primary-color: #17a2b8;
-$dark-color: #343a40;
+$dark-color: #1c1e21;
+$other-dark: #242526;
+$dark-accent:#484a4d;
 $light-color: #f4f4f4;
 $danger-color: #dc3545;
 $success-color: #28a745;
