--- a/front-end/src/assets/styles/style.scss
+++ b/front-end/src/assets/styles/style.scss
@@ -15,6 +15,9 @@ ul {
 a {
     text-decoration: none;
 }
+html {
+    background: $dark-accent;
+}
 .container {
     max-width: 1100px;
     margin: auto;
@@ -250,6 +253,7 @@ margin: 0 0.25rem;
 .form input {
     padding: 15px;
     width: 100%;
+    font-size: 1em;
     border-radius: 10px;
     border: 1px solid #ddd;
     outline: none;
@@ -279,7 +283,7 @@ margin: 0 0.25rem;
 }
 .details {
 }
-@media(min-width:800px) {
+@media(min-width:900px) {
     .landing-inner {
         height: 100vh;
         object-fit: cover;
@@ -287,7 +291,7 @@ margin: 0 0.25rem;
         background-size: 100%;
     }
 }
-@media(max-width:800px) {
+@media(max-width:900px) {
     .landing-inner {
         flex-direction: column;
         transform: scale(0.9);
@@ -301,5 +305,55 @@ margin: 0 0.25rem;
         .register {
             width: 100%;
         }
+    }
+}
+.details {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    margin: 3em 2em;
+    gap: 1em;
+    color: $light-color;
+}
+.card {
+    padding: 1em 2em;
+    background: $dark-color;
+    display: flex;
+    border-radius: 1em;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    transition: transform 400ms ease-in-out,
+    box-shadow 400ms ease-in-out;
+    cursor: pointer;
+    .icon i{
+        font-size: 4em;
+        // height: 100px;
+        // width: 100px;
+    }
+    .card-title {
+        margin: 2em 0;
+    }
+    &:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 5px 10px rgba($color: $dark-color, $alpha: 0.5);
+    }
+}
+
+//Login signUp
+.auth {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 500px;
+    color: #969696;
+    input,button,small {
+        margin: 10px !important;
+    }
+    button {
+        width: 50% !important;
+        display: block;
+    }
+    small {
+        color: #969696;
     }
 }
